--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="menu">
             <!-- Logo con enlaze al inicio -->
             <a href="/index.html">
-                <img class="headerLogoImg" src="/img/logo-gris.png" alt="logo empresa">
+                <img class="headerLogoImg" src="../img/logo-gris.png" alt="logo empresa">
             </a>
             <div class="menu">
 
