arregle imagenes css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Roboto:ital,wght@1,100&display=swap"
         rel="stylesheet">
-
-    <!-- Poniendo CSS -->
+            <!-- Poniendo CSS -->
     <link rel="stylesheet" href="/assets/estilos.css">
 </head>
 
@@ -144,6 +143,13 @@
         <p>Derechos reservados.</p>
     </footer>
     <!-- termina pie de pagina -->
+
+
+
+
+
+    <!-- scrip boostrap -->
+    
 </body>
 
 </html>
