modifico css para meter bootstrap

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 <body>
     <!-- Encabezado header flex -->
-    <header class="header sticky">
+    <header class="encabezado fijo">
         <!-- Menu-->
-        <div class="menu">
+        <div class="menu-principal">
             <!-- Logo con enlaze al inicio -->
             <a href="/index.html">
-                <img class="headerLogoImg" src="../img/logo-gris.png" alt="logo empresa">
+                <img class="headerLogoImg" src= "/img/logo-gris.png" alt="logo empresa">
             </a>
-            <div class="menu">
+            <div class="menu-principal">
 
                 <a class="info" href="/pages/contacto.html">
                     <h5>CONTÁCTANOS</h5>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <!-- Barra de navegacion -->
-        <nav>
+        <nav class="navegador">
             <a class="nav-enlace" href="/index.html">Inicio</a>
             <a class="nav-enlace" href="/pages/servicios.html">Servicios</a>
             <a class="nav-enlace" href="/pages/marcas.html">Marcas</a>
