--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HV COMPRESSORS/INICIO </title>
     <!-- Icono de pagina  -->
-    <link rel="shortcut icon" href="/img/icono.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/icono.png" type="image/x-icon">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Roboto:ital,wght@1,100&display=swap"
         rel="stylesheet">
             <!-- Poniendo CSS -->
-    <link rel="stylesheet" href="/assets/estilos.css">
+    <link rel="stylesheet" href="./assets/estilos.css">
 </head>
 
 <body>
