--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
 
 <body>
     <!-- Encabezado header flex -->
-    <header class="encabezado fijo">
+    <header class="encabezado encabezado-fijo">
         <!-- Menu-->
-        <div class="menu-principal">
+        <div class="encabezado-principal">
             <!-- Logo con enlaze al inicio -->
             <a href="./index.html">
-                <img class="headerLogoImg" src="./img/logo-gris.png"alt="logo empresa">
+                <img class="encabezado-Logo-Img" src="./img/logo-gris.png"alt="logo empresa">
             </a>
-            <div class="menu-principal">
+            <div class="encabezado-principal">
 
-                <a class="info" href="./pages/contacto.html">
+                <a class="encabezado-info" href="./pages/contacto.html">
                     <h5>CONTÁCTANOS</h5>
                 </a>
-                <a class="info" href="./pages/contacto.html">
+                <a class="encabezado-info" href="./pages/contacto.html">
                     <h5>CONTÁCTANOS</h5>
                 </a>
-                <a class="contactanos" href="./pages/contacto.html">
+                <a class="encabezado-contactanos" href="./pages/contacto.html">
                     <h5>CONTÁCTANOS</h5>
                 </a>
             </div>
         </div>
         <!-- Barra de navegacion -->
         <nav class="navegador">
-            <a class="nav-enlace" href="./index.html">Inicio</a>
-            <a class="nav-enlace" href="./pages/servicios.html">Servicios</a>
-            <a class="nav-enlace" href="./pages/marcas.html">Marcas</a>
-            <a class="nav-enlace" href="./pages/proyectos.html">Proyectos</a>
-            <p class="nav-vacio" href="#">.</p>
+            <a class="navegador-enlace" href="./index.html">Inicio</a>
+            <a class="navegador-enlace" href="./pages/servicios.html">Servicios</a>
+            <a class="navegador-enlace" href="./pages/marcas.html">Marcas</a>
+            <a class="navegador-enlace" href="./pages/proyectos.html">Proyectos</a>
+            <p class="navegador-vacio" href="#">.</p>
         </nav>
     </header>
     <!-- imagen con descripcion  -->
