--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Roboto:ital,wght@1,100&display=swap"
             rel="stylesheet">
                 <!-- Poniendo CSS -->
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     
     <body>
@@ -22,28 +22,28 @@
             <!-- Menu-->
             <div class="encabezado-principal">
                 <!-- Logo con enlaze al inicio -->
-                <a href="./index.html">
-                    <img class="encabezado-Logo-Img" src="./img/logo-gris.png"alt="logo empresa">
+                <a href="../index.html">
+                    <img class="encabezado-Logo-Img" src="../img/logo-gris.png"alt="logo empresa">
                 </a>
                 <div class="encabezado-principal">
     
-                    <a class="encabezado-info" href="./pages/contacto.html">
+                    <a class="encabezado-info" href="../pages/contacto.html">
                         <h5>CONTÁCTANOS</h5>
                     </a>
-                    <a class="encabezado-info" href="./pages/contacto.html">
+                    <a class="encabezado-info" href="../pages/contacto.html">
                         <h5>CONTÁCTANOS</h5>
                     </a>
-                    <a class="encabezado-contactanos" href="./pages/contacto.html">
+                    <a class="encabezado-contactanos" href="../pages/contacto.html">
                         <h5>CONTÁCTANOS</h5>
                     </a>
                 </div>
             </div>
             <!-- Barra de navegacion -->
             <nav class="navegador">
-                <a class="navegador-enlace" href="./index.html">Inicio</a>
-                <a class="navegador-enlace" href="./pages/servicios.html">Servicios</a>
-                <a class="navegador-enlace" href="./pages/marcas.html">Marcas</a>
-                <a class="navegador-enlace" href="./pages/proyectos.html">Proyectos</a>
+                <a class="navegador-enlace" href="../index.html">Inicio</a>
+                <a class="navegador-enlace" href="../pages/servicios.html">Servicios</a>
+                <a class="navegador-enlace" href="../pages/marcas.html">Marcas</a>
+                <a class="navegador-enlace" href="../pages/proyectos.html">Proyectos</a>
                 <p class="navegador-vacio" href="#">.</p>
             </nav>
         </header>
