agrego header a todas las paginas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Roboto:ital,wght@1,100&display=swap"
         rel="stylesheet">
-            <!-- Poniendo CSS -->
+    <!-- Poniendo CSS -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -24,28 +24,19 @@
         <div class="encabezado-principal">
             <!-- Logo con enlaze al inicio -->
             <a href="./index.html">
-                <img class="encabezado-Logo-Img" src="./img/logo-gris.png"alt="logo empresa">
+                <img class="encabezado-Logo-Img" src="./img/logo-gris.png" alt="logo empresa">
             </a>
             <div class="encabezado-principal">
-
-                <a class="encabezado-info" href="./pages/contacto.html">
-                    <h5>CONTÁCTANOS</h5>
-                </a>
-                <a class="encabezado-info" href="./pages/contacto.html">
-                    <h5>CONTÁCTANOS</h5>
-                </a>
-                <a class="encabezado-contactanos" href="./pages/contacto.html">
-                    <h5>CONTÁCTANOS</h5>
-                </a>
+                <h5 class="encabezado-eslogan"> ! Cuidando la industria !</h5>
             </div>
         </div>
         <!-- Barra de navegacion -->
         <nav class="navegador">
             <a class="navegador-enlace" href="./index.html">Inicio</a>
-            <a class="navegador-enlace" href="./pages/servicios.html">Servicios</a>
+            <a class="navegador-enlace" href="#Servicios">Servicios</a>
             <a class="navegador-enlace" href="./pages/marcas.html">Marcas</a>
             <a class="navegador-enlace" href="./pages/proyectos.html">Proyectos</a>
-            <p class="navegador-vacio" href="#">.</p>
+            <a class="navegador-contacto" href="./pages/contacto.html">CONTACTANOS</a>
         </nav>
     </header>
     <!-- imagen con descripcion  -->
@@ -55,17 +46,8 @@
         <a class="descripcion-imagen">Solicitar Asistencia</a>
 
     </div>
-    <section>
-
-
-
-
-
-
-
-
-    </section>
     <!-- lista desordenada -->
+    <section>
     <ul>
         <!-- Menu de inicio con link de enlace -->
         <li> <a href="./index.html">Inicio</a></li>
@@ -74,8 +56,11 @@
         <li><a href="./views/proyectos.html">Proyectos</a></li>
         <li><a href="./views/contacto.html">Contacto</a></li>
     </ul>
+</section>
+<a name="Servicios"></a>
+<section>
     <h2 class="quienSomos">QUIENES SOMOS</h2>
-
+</section>
 
 
     <!-- termina en cabezado header -->
@@ -149,7 +134,7 @@
 
 
     <!-- scrip boostrap -->
-    
+
 </body>
 
 </html>
