modifico pagina y creo pagina de contacto

--- a/index.html
+++ b/index.html
@@ -46,7 +46,23 @@
         <a class="descripcion-imagen">Solicitar Asistencia</a>
 
     </div>
-    <!-- lista desordenada -->
+    <!-- Seccion Mision Vision Servicios -->
+<section class="contenedor-mvs">
+<div class="mvs">MISION</div>
+<div class="mvs">VISION</div>
+<div class="mvs">SERVICIOS</div>
+</section>
+<section class="contenedor-mvs-d">
+    <div class="mvs-d">Proporcionar soluciones integrales y servicios de calidad, ofreciendo la mejor atención a nuestros clientes.</div>
+    <div class="mvs-d">Ser una empresa líder a nivel nacional en el mantenimiento de compresores industriales de aire.</div>
+    <div class="mvs-d">Mantenimiento correctivo y preventivo.
+        Renta de compresores industriales.
+        Venta de compresores y refacciones.</div>
+    </section>
+
+
+
+
     <section>
     <ul>
         <!-- Menu de inicio con link de enlace -->
@@ -124,7 +140,7 @@
 
 
     <!-- pie de pagina -->
-    <footer>
+    <footer class="pie-pagina">
         <p>Derechos reservados.</p>
     </footer>
     <!-- termina pie de pagina -->
