creo pagina de asistencia,cotizacion

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     </header>
     <!-- imagen con descripcion  -->
     <div class="contenedor-imagen">
-        <a class="descripcion-imagen">Solicitar Cotizacion
+        <a class="descripcion-imagen" href="./pages/cotizacion.html">Solicitar Cotizacion
         </a>
-        <a class="descripcion-imagen">Solicitar Asistencia</a>
+        <a class="descripcion-imagen" href="./pages/asistencia.html">Solicitar Asistencia</a>
 
     </div>
     <!-- Seccion Mision Vision Servicios -->
