creo pagina de asistencia,cotizacion

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,7 +30,19 @@
     </header>
     <section class="contenedor-contacto">
         <div class="contenedor-contacto-int">
-
+            <div class="contacto-texto">Nombre</div>
+            <div class="contacto-texto">Apellido</div>
+            <div class="contacto-texto">Correo electronico</div>
+            <div class="contacto-texto">Numero de Telefono</div>
+            <div class="contacto-texto">Nombre de empresa</div>
+            <div class="contacto-texto">Puesto</div>
+            <div class="contacto-texto">Domicilio</div>
+            <div class="contacto-texto">Industria</div>
+            <div class="contacto-texto">Tipo de Solicitud</div>
+            <div class="contacto-texto">Categoria de Productos</div>
+            <div class="contacto-texto">Tipo de equipo</div>
+    
+        </div>
         </div>
     </section>
 
