--- a/index.html
+++ b/index.html
@@ -47,56 +47,38 @@
 
     </div>
     <!-- Seccion Mision Vision Servicios -->
-<section class="contenedor-mvs">
-<div class="mvs">MISION</div>
-<div class="mvs">VISION</div>
-<div class="mvs">SERVICIOS</div>
-</section>
-<section class="contenedor-mvs-d">
-    <div class="mvs-d">Proporcionar soluciones integrales y servicios de calidad, ofreciendo la mejor atención a nuestros clientes.</div>
-    <div class="mvs-d">Ser una empresa líder a nivel nacional en el mantenimiento de compresores industriales de aire.</div>
-    <div class="mvs-d">Mantenimiento correctivo y preventivo.
-        Renta de compresores industriales.
-        Venta de compresores y refacciones.</div>
+    <section class="contenedor-mvs">
+        <div class="mvs">MISION</div>
+        <div class="mvs">VISION</div>
+        <div class="mvs">SERVICIOS</div>
+        <!-- Link ancla servicios -->
+        <a name="Servicios"></a>
+    </section>
+
+    <section class="contenedor-mvs-d">
+        <div class="mvs-d">Proporcionar soluciones integrales y servicios de calidad, ofreciendo la mejor atención a
+            nuestros clientes.</div>
+        <div class="mvs-d">Ser una empresa líder a nivel nacional en el mantenimiento de compresores industriales de
+            aire.</div>
+        <div class="mvs-d">Mantenimiento correctivo y preventivo.
+            Renta de compresores industriales.
+            Venta de compresores y refacciones.</div>
+    </section>
+    <section>
+        <h2 class="nuestros-servicios">NUESTROS SERVICIOS</h2>
     </section>
 
 
-
-
-    <section>
-    <ul>
-        <!-- Menu de inicio con link de enlace -->
-        <li> <a href="./index.html">Inicio</a></li>
-        <li><a href="./views/servicios.html">Servicios</a></li>
-        <li><a href="./views/marcas.html">Marcas</a></li>
-        <li><a href="./views/proyectos.html">Proyectos</a></li>
-        <li><a href="./views/contacto.html">Contacto</a></li>
-    </ul>
-</section>
-<a name="Servicios"></a>
-<section>
-    <h2 class="quienSomos">QUIENES SOMOS</h2>
-</section>
-
-
     <!-- termina en cabezado header -->
-    <section class="biografiaDescripcion">
-        <p class="biografia">
-            Somos una empresa dedicada al mantenimiento correctivo y preventivo de compresores industriales de tornillo,
-            paletas y de pistón; además de realizar venta de refacciones y renta o venta de compresores nuevos o de
-            mediano uso.
-            ​Brindamos la seguridad de cuidar sus inversiones, implementando programas de mantenimiento preventivo y así
-            mismo atendiendo problemas correctivos con respuesta inmediata totalmente personalizada.
-            Personal con más de 30 años de experiencia contando con capacitación dentro y fuera del país por una de las
-            marcas más importantes y reconocidas de Norteamérica “HV COMPRESSORS”, con dichos conocimientos nuestra
-            experiencia se complementa de equipo e ingenieros con amplios conocimientos técnicos, capacitados para poder
-            brindar un excelente servicio.
-        </p>
-        <aside>
-            <span>
-                Que pasa amigos
-            </span>
-        </aside>
+    <section class="contenedor-servicios">
+        <div class="contenedor-servicios-int"><p>PREVENTIVO</p>
+        </div >
+        <div class="contenedor-servicios-int"><p>CORRECTIVO</p>
+        </div>
+        <div class="contenedor-servicios-int"><p>VENTA/RENTA</p>    
+        </div>
+        <div class="contenedor-servicios-int"><p>REFACCIONES</p>   
+        </div>
     </section>
 
     <!-- Seccion Mision -->
