--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HV COMPRESSORS/INICIO </title>
+    <meta name="keywords" content="hv compressors,compresores,compresores industriales,renta compresores,refacciones de compresores">
+    <meta name="descripcion" content= "Empresa especializada en mantenimiento correctivo y preventivo de compresores de aire industriales.Somos multimarca.">
+    <title>HV COMPRESSORS</title>
     <!-- Icono de pagina  -->
     <link rel="shortcut icon" href="./img/icono.png" type="image/x-icon">
     <!-- Google fonts -->
