--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Roboto:ital,wght@1,100&display=swap"
         rel="stylesheet">
     <!-- Poniendo CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -41,6 +42,27 @@
             <a class="navegador-contacto" href="./pages/contacto.html">CONTACTANOS</a>
         </nav>
     </header>
+<!-- nav boos -->
+<ul class="nav nav-pills nav-fill nav-black">
+    <li class="nav-item nav-boos-link">
+      <a class="nav-link" href="#">Inicio</a>
+    </li>
+    <li class="nav-item nav-boos-link">
+      <a class="nav-link" href="#Servicios">Servicios</a>
+    </li>
+    <li class="nav-item nav-boos-link">
+      <a class="nav-link" href="#">Marcas</a>
+    </li>
+    <li class="nav-item nav-boos-link">
+      <a class="nav-link" href="#">Proyectos</a>
+    </li>
+    <li class="nav-item nav-boos-link-contacto">
+        <a class="nav-link" href="#">CONTACTANOS</a>
+      </li>
+  </ul>
+
+<!-- termina nav boo -->
+
     <!-- imagen con descripcion  -->
     <div class="contenedor-imagen">
         <a class="descripcion-imagen" href="./pages/cotizacion.html">Solicitar Cotizacion
@@ -134,7 +156,7 @@
 
 
     <!-- scrip boostrap -->
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
