creo pagina de asistencia,cotizacion

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- Encabezado header flex -->
-    <header class="encabezado encabezado-fijo">
+    <header class="encabezado">
         <!-- Menu-->
         <div class="encabezado-principal">
             <!-- Logo con enlaze al inicio -->
@@ -33,37 +33,33 @@
                 <h5 class="encabezado-eslogan"> ! Cuidando la industria !</h5>
             </div>
         </div>
-        <!-- Barra de navegacion -->
-        <nav class="navegador">
-            <a class="navegador-enlace" href="./index.html">Inicio</a>
-            <a class="navegador-enlace" href="#Servicios">Servicios</a>
-            <a class="navegador-enlace" href="./pages/marcas.html">Marcas</a>
-            <a class="navegador-enlace" href="./pages/proyectos.html">Proyectos</a>
-            <a class="navegador-contacto" href="./pages/contacto.html">CONTACTANOS</a>
-        </nav>
+        
     </header>
-<!-- nav boos -->
+    <!-- nav boos -->
 <ul class="nav nav-pills nav-fill nav-black">
     <li class="nav-item nav-boos-link">
-      <a class="nav-link" href="#">Inicio</a>
+      <a class="nav-link" href="./index.html">Inicio</a>
     </li>
     <li class="nav-item nav-boos-link">
       <a class="nav-link" href="#Servicios">Servicios</a>
     </li>
     <li class="nav-item nav-boos-link">
-      <a class="nav-link" href="#">Marcas</a>
+      <a class="nav-link" href="./pages/marcas.html">Marcas</a>
     </li>
     <li class="nav-item nav-boos-link">
-      <a class="nav-link" href="#">Proyectos</a>
+      <a class="nav-link" href="./pages/proyectos.html">Proyectos</a>
     </li>
     <li class="nav-item nav-boos-link-contacto">
-        <a class="nav-link" href="#">CONTACTANOS</a>
+        <a class="nav-link" href="./pages/contacto.html">CONTACTANOS</a>
       </li>
   </ul>
-
 <!-- termina nav boo -->
-
-    <!-- imagen con descripcion  -->
+<!-- imagen boostrap -->
+<div class="container-fluid contenedor-imagen">100% wide until large breakpoint
+    <a class="descripcion-imagen" href="./pages/cotizacion.html">Solicitar Cotizacion
+    </a>
+    <a class="descripcion-imagen" href="./pages/asistencia.html">Solicitar Asistencia</a>
+</div>
     <div class="contenedor-imagen">
         <a class="descripcion-imagen" href="./pages/cotizacion.html">Solicitar Cotizacion
         </a>
