--- a/index.html
+++ b/index.html
@@ -55,17 +55,48 @@
   </ul>
 <!-- termina nav boo -->
 <!-- imagen boostrap -->
-<div class="container-fluid contenedor-imagen">100% wide until large breakpoint
+<div class="d-flex container-fluid contenedor-imagen">
     <a class="descripcion-imagen" href="./pages/cotizacion.html">Solicitar Cotizacion
     </a>
     <a class="descripcion-imagen" href="./pages/asistencia.html">Solicitar Asistencia</a>
 </div>
-    <div class="contenedor-imagen">
-        <a class="descripcion-imagen" href="./pages/cotizacion.html">Solicitar Cotizacion
-        </a>
-        <a class="descripcion-imagen" href="./pages/asistencia.html">Solicitar Asistencia</a>
+<!-- imagen boostrap prueba -->
+<div class="d-flex container-fluid contenedor-imagens align-items-end justify-content-center">
+    <img src="/img/biografia.png" alt="header" class="img-fluid">
+    <a class="d-flex descripcion-imagen" href="./pages/cotizacion.html">Solicitar Cotizacion
+    </a>
+    <a class="d-flex descripcion-imagen" href="./pages/asistencia.html">Solicitar Asistencia</a>
+</div>
 
+<!-- contenedor mision vision servicios -->
+<div class="axr d-flex align-items-center">
+<div class="container">
+    <div class="row ">
+      <div class="bxr col-sm">MISION</div>
+      <div class="bxr col-sm">VISION</div>
+      <div class="bxr col-sm"> SERVICIOS</div>
     </div>
+    <div class="row">
+      <div class="bxr col-sm">
+        Proporcionar soluciones integrales y servicios de calidad, ofreciendo la mejor atención a nuestros clientes.
+      </div>
+      <div class="bxr col-sm">
+        Ser una empresa líder a nivel nacional en el mantenimiento de compresores industriales de aire.
+      </div>
+      <div class="bxr col-sm">
+        Mantenimiento correctivo y preventivo.
+        Renta de compresores industriales.
+        Venta de compresores y refacciones.
+      </div>
+    </div>
+  </div>
+</div>
+  <!-- otor -->
+  <div class="d-flex flex-row bd-highlight mb-3 justify-content-between">
+    <div class="p-2 bd-highlight">Flex item 1</div>
+    <div class="p-2 bd-highlight">Flex item 2</div>
+    <div class="p-2 bd-highlight">Flex item 3</div>
+  </div>
     <!-- Seccion Mision Vision Servicios -->
     <section class="contenedor-mvs">
         <div class="mvs">MISION</div>
