--- a/index.html
+++ b/index.html
@@ -54,19 +54,11 @@
       </li>
   </ul>
 <!-- termina nav boo -->
-<!-- imagen boostrap -->
-<div class="d-flex container-fluid contenedor-imagen">
-    <a class="descripcion-imagen" href="./pages/cotizacion.html">Solicitar Cotizacion
-    </a>
-    <a class="descripcion-imagen" href="./pages/asistencia.html">Solicitar Asistencia</a>
-</div>
+
 <!-- imagen boostrap prueba -->
-<div class="d-flex container-fluid contenedor-imagens align-items-end justify-content-center">
+<div class="d-flex contenedor-imagens container-fluid align-items-end justify-content-center">
     <img src="/img/biografia.png" alt="header" class="img-fluid">
-    <a class="d-flex descripcion-imagen" href="./pages/cotizacion.html">Solicitar Cotizacion
-    </a>
-    <a class="d-flex descripcion-imagen" href="./pages/asistencia.html">Solicitar Asistencia</a>
-</div>
+   </div>
 
 <!-- contenedor mision vision servicios -->
 <div class="axr d-flex align-items-center">
@@ -91,35 +83,48 @@
     </div>
   </div>
 </div>
-  <!-- otor -->
-  <div class="d-flex flex-row bd-highlight mb-3 justify-content-between">
-    <div class="p-2 bd-highlight">Flex item 1</div>
-    <div class="p-2 bd-highlight">Flex item 2</div>
-    <div class="p-2 bd-highlight">Flex item 3</div>
-  </div>
-    <!-- Seccion Mision Vision Servicios -->
-    <section class="contenedor-mvs">
-        <div class="mvs">MISION</div>
-        <div class="mvs">VISION</div>
-        <div class="mvs">SERVICIOS</div>
-        <!-- Link ancla servicios -->
-        <a name="Servicios"></a>
-    </section>
-
-    <section class="contenedor-mvs-d">
-        <div class="mvs-d">Proporcionar soluciones integrales y servicios de calidad, ofreciendo la mejor atención a
-            nuestros clientes.</div>
-        <div class="mvs-d">Ser una empresa líder a nivel nacional en el mantenimiento de compresores industriales de
-            aire.</div>
-        <div class="mvs-d">Mantenimiento correctivo y preventivo.
-            Renta de compresores industriales.
-            Venta de compresores y refacciones.</div>
-    </section>
-    <section>
+             <a name="Servicios"></a>
+       <section>
         <h2 class="nuestros-servicios">NUESTROS SERVICIOS</h2>
     </section>
-
-
+    <!-- prueba -->
+    <img src="/img/img-4.png" class="rounded float-start" alt="...">
+    <img src="/img/img-4.png" class="rounded float-end" alt="...">
+<!-- prueba -->
+<div class="card-group">
+  <div class="card text-white">
+    <img src="/img/img-4.png" class="card-img" alt="">
+    <div class="card-img-overlay">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
     <!-- termina en cabezado header -->
     <section class="contenedor-servicios">
         <div class="contenedor-servicios-int"><p>PREVENTIVO</p>
